Add Github Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "past_participle",
-  "homepage": "http://pbartkowiak-dev.github.io/past_participle/",
+  "homepage": "http://pbartkowiak-dev.github.io/past_participle",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
